--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,4 +1,29 @@
+.contact-container {    
+    width: auto;
+    height: 10vh;
+    padding-top: 10%;
+    display: grid;
+    grid-template-columns: auto auto ;
+};
 
+.form-container {
+ /* //   display: grid;
+    grid-template-columns: 1fr;
+     */
+}
+
+.form {
+    
+}
+
+a, p, li, label {
+    color: white;
+}
+
+.footer {
+    margin-top: 10%;
+}
+/* 
 .container_form {
     display: flex;
     flex-direction: column;
@@ -53,4 +78,4 @@ input {
 
 a {
     color: white;
-}
+} */
