--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,7 +1,36 @@
+/* HEADER                     */
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 .intelligentH { /* ESTE SI LE PEGA */
     height: 60%;
     margin: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
+
+.header-block {
+    height: 40%;
+    width: 50%;
+    font-family: 'Lato', sans-serif;
+    background: rgba(63, 11, 108, 0.26);
+    padding: 1%;
+    border-radius: 2%;
+    transition: 2s;
+    font-size: larger;
+    font-weight: bold;
+}
+.header-block:hover {
+    background: rgba(143, 14, 109, 0.5);
+    transition: 2s;
+}
+
+.p-header {
+    padding: 0.3%;
+    margin-top: 2%;
+}
+
+/* // ///////////////// */
 
 .my-app {
     width: auto;
@@ -14,12 +43,15 @@
     height: 30%;
     display: flex;
     justify-content: center;
+    font-size: larger;
+    font-weight: bold;
 }
 
 .technologies {
     display: flex;
-    margin-right: 10%;
+    margin-right: 5%;
     margin-top: 1.5%;
+    margin-left: 2%;
 }
 
 .urls a {
@@ -33,3 +65,38 @@
 .back { 
     margin-top: 7%;
 }
+
+.languagues { 
+    margin-top: 7%;
+}
+
+
+/* MEDIAS QUERIES    */
+
+/* If the screen size is 601px or minor,  */
+@media only screen and (max-width: 1066px) {
+    .intelligentH { /* ESTE SI LE PEGA */
+        height: 60%;
+        margin: 1em;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
+    
+    .header-block {
+        height: 35%;
+        width: 60%;
+        font-family: 'Lato', sans-serif;
+        background: rgba(63, 11, 108, 0.26);
+        padding: 1%;
+        border-radius: 2%;
+        transition: 2s;
+    }
+  };
+
+  /* If the screen size is 576px width or minor,  */
+  @media only screen and (max-width: 792px) {
+    .urls {
+        visibility: hidden;
+    }
+  }
